Update in index

--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
             <tr><th colspan="2">More Information</th></tr>
         </thead>
         <tbody>
-            <tr><td> <em><a href="My Hobbies.html">My Hobbies</a></em></td>
-                <td><em><a href="Contact Me.html">Contact Me</a></em></td>
+            <tr><td> <em><a href="my-hobbies.html">My Hobbies</a></em></td>
+                <td><em><a href="contact-me.html">Contact Me</a></em></td>
             </tr>
         </tbody>
     </table>
