--- a/contact-me.html
+++ b/contact-me.html
@@ -10,7 +10,7 @@
     <h1>Contact-Me</h1>
     <ol>
         <li>My Email: <em>bhattacharyaabhigyan7@gmail.com</em></li>
-        <li>LinkedIn :https://www.linkedin.com/in/abhigyan-bhattacharya/</li>
+        <li>LinkedIn:<a href="https://www.linkedin.com/in/abhigyan-bhattacharya/">My Profile</a></li>
     </ol>
 
     <form action="mailto:papan031998@gmail.com" method="post" enctype="text/plain" >
